# stiff

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: flex_attention_investigation.md  stiff_compile_pathway.md  stiff_dispatch_and_lowering.md
gym/: flex_attn.ipynb  stiff_demo.py
stiff/_higher_order_ops/: flex_attention.py
stiff/_inductor/: __init__.py  flex_attention.py  flex_decoding.py
stiff/attention/: flex_attention.py
stiff/codegen/: cpp_flex_attention_template.py
stiff/codegen/cutedsl/: cutedsl_kernel.py  cutedsl_op_overrides.py  cutedsl_scheduling.py  cutedsl_template.py
stiff/flex/: common.py  flex_attention.py  flex_cpu.py  flex_decoding.py  flex_flash_attention.py
tests/: test_flex_attention.py  test_flex_decoding.py  test_flex_flash.py
